Fixed current city name alignment

--- a/src/front-end/weather-app/src/app/app.component.css
+++ b/src/front-end/weather-app/src/app/app.component.css
@@ -20,10 +20,9 @@ body {
 }
 
 .search {
-  width: 600px;
+  width: 1250px;
   display: flex;
   align-items: flex-start;
-  justify-content: space-between;
 }
 
 .search input {
@@ -37,6 +36,8 @@ body {
   flex: 1;
   margin-right: 16px;
   font-size: 18px;
+  max-width: 370px;
+  min-width: 300px;
 }
 
 .search button {
@@ -47,6 +48,8 @@ body {
   width: 60px;
   height: 60px;
   cursor: pointer;
+  min-width: 60px;
+  min-height: 60px;
 }
 
 .card {
@@ -107,8 +110,7 @@ body {
 
 .city{
   user-select: none;
+  text-align: right;
   font-size: 40px;
-  text-align: center;
-  align-content: center;
   margin-left: 30px;
 }
